# libmpsse

./: CMakeLists.txt
src/: CMakeLists.txt  mpsse.c
src/examples/: CMakeLists.txt
